# cmake-static-libdemo

./: README.md
staticapp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  staticapp
staticmath/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  library.c  library.h
